--- a/deploy/prod-all-in-one/devops-sample.yaml
+++ b/deploy/prod-all-in-one/devops-sample.yaml
@@ -7,7 +7,7 @@ metadata:
     component: ks-sample
     tier: backend
   name: ks-sample
-  namespace: kubesphere-sample-prod
+  namespace: ks-sample-prod
 spec:
   progressDeadlineSeconds: 600
   replicas: 2
@@ -67,7 +67,7 @@ metadata:
     app: kubesphere
     component: ks-sample
   name: ks-sample
-  namespace: kubesphere-sample-prod
+  namespace: ks-sample-prod
 spec:
   ports:
     - name: http
