--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <repositories>
         <repository>
             <id>spring</id>
-            <url>https://maven.aliyun.com/repository/spring</url>
+            <url>https://maven.aliyun.com/repository/public</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -34,7 +34,7 @@
     <pluginRepositories>
         <pluginRepository>
             <id>spring</id>
-            <url>https://maven.aliyun.com/repository/spring</url>
+            <url>https://maven.aliyun.com/repository/public</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
