--- a/deploy/prod-ol/devops-sample.yaml
+++ b/deploy/prod-ol/devops-sample.yaml
@@ -6,7 +6,7 @@ metadata:
     component: ks-sample
     tier: backend
   name: ks-sample
-  namespace: kubesphere-sample-prod
+  namespace: ks-sample-prod
 spec:
   progressDeadlineSeconds: 600
   replicas: 2
