--- a/deploy/prod-all-in-one/devops-sample.yaml
+++ b/deploy/prod-all-in-one/devops-sample.yaml
@@ -28,7 +28,8 @@ spec:
         component: ks-sample
         tier: backend
     spec:
-      imagePullSecrets: ks-harbor-demo
+      imagePullSecrets: 
+      - name: ks-harbor-demo
       containers:
         - env:
             - name: CACHE_IGNORE
