--- a/deploy/prod-all-in-one/devops-sample.yaml
+++ b/deploy/prod-all-in-one/devops-sample.yaml
@@ -44,7 +44,7 @@ spec:
             timeoutSeconds: 10
             failureThreshold: 30
             periodSeconds: 5
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: ks
           ports:
             - containerPort: 8080
